--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "if-env": "^1.0.4",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.3.4"
   }
 }
