--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.5.2",
     "express": "^4.16.3",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "react-bootstrap": "^1.3.0",
     "sequelize": "^6.3.4"
   }
 }
