--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react-bootstrap": "^1.3.0",
+    "react-datepicker": "^3.1.3",
     "sequelize": "^6.3.4"
   }
 }
