--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@devexpress/dx-react-core": "2.7.0",
+    "@devexpress/dx-react-scheduler": "2.7.0",
+    "@devexpress/dx-react-scheduler-material-ui": "2.7.0",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
+    "clsx": "^1.0.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-chartjs-2": "^2.10.0",
@@ -18,7 +23,8 @@
     "react-infinite-calendar": "^2.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-tabs": "^3.1.1"
+    "react-tabs": "^3.1.1",
+    "rrule": "2.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
