--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
     "clsx": "^1.0.4",
+    "mdbreact": "^4.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-chartjs-2": "^2.10.0",
