--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-chartjs-2": "^2.10.0",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-infinite-calendar": "^2.3.1",
     "react-router-dom": "^5.2.0",
